changed classes names

--- a/index.html
+++ b/index.html
@@ -23,129 +23,129 @@
       <h2 class="section-title">Breaking news</h2>
       <article>
         <div class="article-images"><img src="https://picsum.photos/id/1/600/600" alt="Article 1"></div>
-        <div class="article-title-paragraph-button">  
-        <h2>Article 1</h2>
+        <container class="article-content">  
+          <h2>Article 1</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure corrupti sequi, soluta accusantium totam deserunt facere impedit nam doloremque error nemo beatae? Recusandae, harum nulla? Porro debitis ipsa laboriosam dignissimos?</p>
           <button>Read</button>
           <button>Share</button>
-          <span class="counter">300 words</span>
-        </div>
+          <span>300 words</span>
+        </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/12/600/600" alt="Article 2"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 2</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae maiores soluta adipisci saepe distinctio itaque laboriosam sunt amet, minus ex iure impedit iusto eligendi repudiandae. Molestias consectetur assumenda voluptate?</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>400 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae maiores soluta adipisci saepe distinctio itaque laboriosam sunt amet, minus ex iure impedit iusto eligendi repudiandae. Molestias consectetur assumenda voluptate?</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>400 words</span>
+          </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/20/600/600" alt="Article 3"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 3</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam odio aspernatur temporibus ducimus voluptatum praesentium veritatis. A atque dolores doloribus dicta labore porro deleniti, modi itaque consequatur veritatis sit nesciunt?</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>350 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam odio aspernatur temporibus ducimus voluptatum praesentium veritatis. A atque dolores doloribus dicta labore porro deleniti, modi itaque consequatur veritatis sit nesciunt?</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>350 words</span>
+          </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/42/600/600" alt="Article 4"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 4</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis officiis iure in animi deleniti dicta totam sed iusto necessitatibus! Dolores doloribus veritatis sit commodi molestiae distinctio libero ipsa, aliquam voluptatibus?</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>320 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 4</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis officiis iure in animi deleniti dicta totam sed iusto necessitatibus! Dolores doloribus veritatis sit commodi molestiae distinctio libero ipsa, aliquam voluptatibus?</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>320 words</span>
+          </container>
         </article>
     </section>
     <section>
       <h2 class="section-title">International news</h2>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/22/600/600" alt="Article 5"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 5</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore illum ullam corporis nihil, vitae quas eaque voluptatem esse odit aut hic. Quasi veniam molestias impedit inventore fuga. Fuga, voluptate sint?</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>280 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 5</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore illum ullam corporis nihil, vitae quas eaque voluptatem esse odit aut hic. Quasi veniam molestias impedit inventore fuga. Fuga, voluptate sint?</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>280 words</span>
+          </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/43/600/600" alt="Article 6"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 6</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo sed porro veritatis velit placeat repudiandae omnis cumque fugiat facilis veniam, laboriosam earum sunt sit deleniti mollitia dignissimos atque vel!</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>312 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 6</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo sed porro veritatis velit placeat repudiandae omnis cumque fugiat facilis veniam, laboriosam earum sunt sit deleniti mollitia dignissimos atque vel!</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>312 words</span>
+          </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/45/600/600" alt="Article 7"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 7</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem temporibus nihil a tenetur. Repellendus et corrupti recusandae excepturi in nemo, perferendis voluptatem, pariatur praesentium alias sit expedita voluptate nostrum magni.</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>265 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 7</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem temporibus nihil a tenetur. Repellendus et corrupti recusandae excepturi in nemo, perferendis voluptatem, pariatur praesentium alias sit expedita voluptate nostrum magni.</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>265 words</span>
+          </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/49/600/600" alt="Article 8"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 8</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error inventore consequatur unde modi quod aut laboriosam architecto. Ab ducimus facere, ea enim placeat reiciendis dolores quis iste sequi eligendi totam.</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>437 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 8</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error inventore consequatur unde modi quod aut laboriosam architecto. Ab ducimus facere, ea enim placeat reiciendis dolores quis iste sequi eligendi totam.</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>437 words</span>
+          </container>
         </article>
     </section>
     <section>
       <h2 class="section-title">Sports news</h2>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/71/600/600" alt="Article 9"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 9</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi totam fugiat id veritatis voluptate dicta nulla in rerum, sit possimus explicabo, ipsum eaque, sint iste reiciendis nisi maxime quia? Tempore!</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>187 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 9</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi totam fugiat id veritatis voluptate dicta nulla in rerum, sit possimus explicabo, ipsum eaque, sint iste reiciendis nisi maxime quia? Tempore!</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>187 words</span>
+          </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/72/600/600" alt="Article 10"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 10</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque porro, dolorum pariatur corrupti asperiores cum autem repudiandae saepe culpa delectus facere numquam obcaecati ullam fugiat mollitia quidem fugit consequuntur magnam!</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>223 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 10</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque porro, dolorum pariatur corrupti asperiores cum autem repudiandae saepe culpa delectus facere numquam obcaecati ullam fugiat mollitia quidem fugit consequuntur magnam!</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>223 words</span>
+          </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/74/600/600" alt="Article 11"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 11</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque ratione sit ex corporis, debitis odio? Eaque beatae, architecto, tempore reiciendis sapiente minima quis possimus eos, repudiandae quam nesciunt at impedit.</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>334 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 11</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque ratione sit ex corporis, debitis odio? Eaque beatae, architecto, tempore reiciendis sapiente minima quis possimus eos, repudiandae quam nesciunt at impedit.</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>334 words</span>
+          </container>
         </article>
         <article>
           <div class="article-images"><img src="https://picsum.photos/id/96/600/600" alt="Article 12"></div>
-          <div class="article-title-paragraph-button">  
-          <h2>Article 12</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, soluta enim quos obcaecati minus cum veniam mollitia aliquam maiores quis, doloribus error maxime nesciunt quam accusamus provident consequatur? Veritatis, ratione.</p>
-          <button>Read</button>
-          <button>Share</button>
-          <span>298 words</span>
-          </div>
+          <container class="article-content">  
+            <h2>Article 12</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, soluta enim quos obcaecati minus cum veniam mollitia aliquam maiores quis, doloribus error maxime nesciunt quam accusamus provident consequatur? Veritatis, ratione.</p>
+            <button>Read</button>
+            <button>Share</button>
+            <span>298 words</span>
+          </container>
         </article>
     </section>
   </main>
